--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 
 <body>
   <h1>Number Guesser</h1>
-  <script src="js/scripts.js"></script>
+  <script src="javascript/number_guesser.js"></script>
 </body>
 </html>
