Add form buttons

--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
 
 <body>
   <h1>Number Guesser</h1>
-  <script src="javascript/number_guesser.js"></script>
+  <h4>Guess a random number:</h4>
+  <form>
+    <input type='text'>
+    <button type='reset'>Clear Form</button><button type='submit'>Submit Answer</button>
+  </form>
+
 </body>
+  <script
+    src="https://code.jquery.com/jquery-3.2.1.min.js"
+    integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+    crossorigin="anonymous">
+  </script>
+  <script src="javascript/number_guesser.js"></script>
 </html>
