Add guess conditional for message

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <button id='submit-button' type='submit'>Submit Answer</button><button type='reset'>Clear Form</button>
 
   <h4 id='last-guess'></h4>
+  <h1 id='message'></h1>
 </body>
   <script
     src="https://code.jquery.com/jquery-3.2.1.min.js"
