--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <h1>Number Guesser</h1>
   <h4>Guess a random number:</h4>
 
-  <input type='text' id='guess-field' placeholder='Enter your guess here'><br>
-  <button id='submit-button' type='submit'>Submit Answer</button><button type='reset'>Clear Form</button>
+  <input type='number' id='guess-field' placeholder='Enter your guess here'><br>
+  <button id='submit-button' type='submit'>Submit Answer</button><button id='reset-button' type='reset'>Clear Form</button>
 
   <h4 id='last-guess'></h4>
   <h1 id='message'></h1>
