Finish functionality of phase 1.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
   <h4>Guess a random number:</h4>
 
   <input type='number' id='guess-field' placeholder='Enter your guess here'><br>
-  <button id='submit-button' type='submit'>Submit Answer</button><button id='reset-button' type='reset'>Clear Form</button>
+  <button id='submit-button' type='submit'>Submit Answer</button><button id='clear-button' type='reset'>Clear Form</button><br>
+  <button id='reset-button'>Reset Game</button>
 
   <h4 id='last-guess'></h4>
   <h1 id='message'></h1>
