Add ability to create range.

--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
   </header>
 
   <h3>Set Guess Range:</h3>
-  <input type='number' id='min-field' placeholder='1'><input type='number' id='max-field' placeholder='100'><br><br>
+  <input type='number' id='min-field' placeholder='1'><input type='number' id='max-field' placeholder='100'>
+  <button type='submit' id='range-submit'>Submit</button>
+  <br><br>
 
   <input type='number' id='guess-field' placeholder='Enter your guess'><br>
-  <button id='submit-button' type='submit'>Guess</button><button id='clear-button' type='reset'>Clear</button><br>
+  <button type='submit' id='submit-button'>Guess</button><button id='clear-button' type='reset'>Clear</button><br>
 
   <h4 id='last-guess'></h4>
   <h1 id='message'></h1>
