Add ability to play game again. Phase 3 completed.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
   <h4 id='last-guess'></h4>
   <h1 id='message'></h1>
 
-  <button id='reset-button'>Reset Game</button>
+  <button id='reset-button'>Reset Game</button><br>
+  <button id='play-again' style='display: none'>Play Again</button>
 </body>
   <script
     src="https://code.jquery.com/jquery-3.2.1.min.js"
